--- a/BKS/Properties/Resources.resx
+++ b/BKS/Properties/Resources.resx
@@ -118,6 +118,39 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icon_fatura" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_fatura.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_goruntule" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_goruntule.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_liste" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_liste.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_odemeGirisi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_odemeGirisi.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_odemeYonetimi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_odemeYonetimi.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_ogrencionkayit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_ogrencionkayit.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_ogrenciYonetimi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_ogrenciYonetimi.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_personel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_personel.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_rapor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_rapor.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_sinifEkle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_sinifEkle.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icon_yeniKayit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_yeniKayit.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="WhatsApp Image 2025-03-10 at 21.20.09" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WhatsApp Image 2025-03-10 at 21.20.09.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
